--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -14,48 +14,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clonar repositorio
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Instalar Trivy
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
 
-      - name: Crear carpeta reports
-        run: mkdir -p reports
-
       - name: Ejecutar Trivy para IaC (Generar informe JSON)
         run: |
-          trivy fs . --exit-code 0 --severity LOW,MEDIUM,HIGH,CRITICAL --format json --output reports/trivy-iac-report.json
+          trivy fs . --exit-code 0 --severity LOW,MEDIUM,HIGH,CRITICAL --format json --output trivy-iac-report.json
           echo "==> Archivos tras Trivy:"
           ls -la
+      - name: Ver contenido del informe Trivy
+        run: cat trivy-iac-report.json
 
-      - name: Verificar si el informe de Trivy existe
+      - name: Enviar informe de Trivy a DefectDojo
         run: |
-          if [ ! -f reports/trivy-iac-report.json ]; then
-            echo "Error: El informe de Trivy no se ha generado."
-            exit 1
-          fi
-
-      - name: Publicar informe de Trivy en DefectDojo
-        id: import-scan
-        uses: ivanamat/defectdojo-import-scan@v1
-        with:
-          token: ${{ secrets.DEFECTDOJO_API_KEY }}
-          defectdojo_url: ${{ secrets.DEFECTDOJO_URL }}
-          file: reports/trivy-iac-report.json
-          scan_type: Trivy Scan
-          engagement: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
-
-      - name: Mostrar respuesta
-        run: |
-          set -e
-          printf '%s\n' '${{ steps.import-scan.outputs.response }}'
+          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            --form "scan_type=Trivy Scan" \
+            --form "file=@trivy-iac-report.json;type=application/json" \
+            --form "scan_date=$(date +%F)" \
+            --form "active=true" \
+            --form "verified=false" \
+            --form "minimum_severity=Low" \
+            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
 
   sca:
     runs-on: ubuntu-latest
     steps:
       - name: Clonar repositorio
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Configurar Java
         uses: actions/setup-java@v3
@@ -65,45 +55,36 @@ jobs:
 
       - name: Instalar Maven
         run: sudo apt-get install -y maven
-
-      - name: Crear carpeta reports
-        run: mkdir -p reports
 
       - name: Ejecutar Dependency-Check (Generar informe JSON)
         run: |
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.4.0/dependency-check-8.4.0-release.zip
           unzip dependency-check-8.4.0-release.zip
-          ./dependency-check/bin/dependency-check.sh --project gestor-bancario --scan . --disableAssembly --format JSON --out reports/dependency-check-report.json
+          ./dependency-check/bin/dependency-check.sh --project gestor-bancario --scan . --disableAssembly --format JSON --out dependency-check-report.json
           echo "==> Archivos tras Dependency-Check:"
           ls -la
 
-      - name: Verificar si el informe de Dependency-Check existe
-        run: |
-          if [ ! -f reports/dependency-check-report.json ]; then
-            echo "Error: El informe de Dependency-Check no se ha generado."
-            exit 1
-          fi
+      - name: Ver contenido del informe DependencyCheck
+        run: cat dependency-check-report.json
 
-      - name: Publicar informe de Dependency-Check en DefectDojo
-        id: import-scan
-        uses: ivanamat/defectdojo-import-scan@v1
-        with:
-          token: ${{ secrets.DEFECTDOJO_API_KEY }}
-          defectdojo_url: ${{ secrets.DEFECTDOJO_URL }}
-          file: reports/dependency-check-report.json
-          scan_type: Dependency Check Scan
-          engagement: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
-
-      - name: Mostrar respuesta
+      - name: Enviar informe de Dependency-Check a DefectDojo
         run: |
-          set -e
-          printf '%s\n' '${{ steps.import-scan.outputs.response }}'
+          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            --form "scan_type=Dependency Check Scan" \
+            --form "file=@dependency-check-report.json;type=application/json" \
+            --form "scan_date=$(date +%F)" \
+            --form "active=true" \
+            --form "verified=false" \
+            --form "minimum_severity=Low" \
+            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
 
   sast:
     runs-on: ubuntu-latest
     steps:
       - name: Clonar repositorio
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Configurar Java
         uses: actions/setup-java@v3
@@ -113,9 +94,6 @@ jobs:
 
       - name: Instalar Maven
         run: sudo apt-get install -y maven
-
-      - name: Crear carpeta reports
-        run: mkdir -p reports
 
       - name: Ejecutar análisis con SpotBugs (Generar informe XML)
         run: |
@@ -123,36 +101,27 @@ jobs:
           echo "==> Archivos tras SpotBugs:"
           ls -la 
 
-      - name: Verificar si el informe de SpotBugs existe
+      - name: Ver contenido del informe Spotbugs
+        run: cat PAI2_ST10/target/spotbugsXml.xml
+
+      - name: Enviar informe de SpotBugs a DefectDojo
         run: |
-          if [ ! -f PAI2_ST10/target/spotbugsXml.xml ]; then
-            echo "Error: El informe de SpotBugs no se ha generado."
-            exit 1
-          fi
-
-      - name: Mover informe de SpotBugs a la carpeta reports
-        run: mv PAI2_ST10/target/spotbugsXml.xml reports/spotbugs-report.xml
-
-      - name: Publicar informe de SpotBugs en DefectDojo
-        id: import-scan
-        uses: ivanamat/defectdojo-import-scan@v1
-        with:
-          token: ${{ secrets.DEFECTDOJO_API_KEY }}
-          defectdojo_url: ${{ secrets.DEFECTDOJO_URL }}
-          file: reports/spotbugs-report.xml
-          scan_type: SpotBugs Scan
-          engagement: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
-
-      - name: Mostrar respuesta
-        run: |
-          set -e
-          printf '%s\n' '${{ steps.import-scan.outputs.response }}'
+          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            --form "scan_type=SpotBugs Scan" \
+            --form "file=@PAI2_ST10/target/spotbugsXml.xml;type=application/xml" \
+            --form "scan_date=$(date +%F)" \
+            --form "active=true" \
+            --form "verified=false" \
+            --form "minimum_severity=Low" \
+            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
 
   dast:
     runs-on: ubuntu-latest
     steps:
       - name: Clonar repositorio
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Configurar Java
         uses: actions/setup-java@v3
@@ -162,9 +131,6 @@ jobs:
 
       - name: Instalar Maven
         run: sudo apt-get install -y maven
-
-      - name: Crear carpeta reports
-        run: mkdir -p reports
 
       - name: Instalar dependencias
         run: |
@@ -174,38 +140,33 @@ jobs:
         run: |
           docker run --rm -u root -v $(pwd):/zap/wrk -t zaproxy/zap-stable zap-full-scan.py \
             -t https://host.docker.internal:3343 \
-            -J reports/zap-report.json \
-            -r reports/zap-report.html
+            -J zap-report.json \
+            -r zap-report.html
           echo "==> Archivos tras OWASP ZAP:"
           ls -la
 
-      - name: Verificar si el informe de ZAP existe
-        run: |
-          if [ ! -f reports/zap-report.json ]; then
-            echo "Error: El informe de ZAP no se ha generado."
-            exit 1
-          fi
 
-      - name: Publicar informe de ZAP en DefectDojo
-        id: import-scan
-        uses: ivanamat/defectdojo-import-scan@v1
-        with:
-          token: ${{ secrets.DEFECTDOJO_API_KEY }}
-          defectdojo_url: ${{ secrets.DEFECTDOJO_URL }}
-          file: reports/zap-report.json
-          scan_type: ZAP Scan
-          engagement: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
+      - name: Ver contenido del informe ZAP
+        run: cat zap-report.json
 
-      - name: Mostrar respuesta
+      - name: Enviar informe de OWASP ZAP a DefectDojo
         run: |
-          set -e
-          printf '%s\n' '${{ steps.import-scan.outputs.response }}'
+          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            --form "scan_type=ZAP Scan" \
+            --form "file=@zap-report.json;type=application/json" \
+            --form "scan_date=$(date +%F)" \
+            --form "active=true" \
+            --form "verified=false" \
+            --form "minimum_severity=Low" \
+            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
 
   iast:
     runs-on: ubuntu-latest
     steps:
       - name: Clonar repositorio
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Configurar Java
         uses: actions/setup-java@v3
@@ -215,9 +176,6 @@ jobs:
 
       - name: Instalar Maven
         run: sudo apt-get install -y maven
-
-      - name: Crear carpeta reports
-        run: mkdir -p reports
 
       - name: Instalar dependencias
         run: |
@@ -231,28 +189,22 @@ jobs:
           nohup java -jar target/mi-aplicacion.jar > app.log 2>&1 &
           echo "Esperando a que la aplicación inicie..."
           sleep 30
-          semgrep --config=auto --exclude target --exclude .git . --sarif > reports/semgrep-report.sarif
+          semgrep --config=auto --exclude target --exclude .git . --json > semgrep-report.sarif
           echo "==> Archivos tras Semgrep:"
           ls -la
 
-      - name: Verificar si el informe de Semgrep existe
-        run: |
-          if [ ! -f reports/semgrep-report.sarif ]; then
-            echo "Error: El informe de Semgrep no se ha generado."
-            exit 1
-          fi
+      - name: Ver contenido del informe Semgrep
+        run: cat semgrep-report.sarif
 
-      - name: Publicar informe de Semgrep en DefectDojo
-        id: import-scan
-        uses: ivanamat/defectdojo-import-scan@v1
-        with:
-          token: ${{ secrets.DEFECTDOJO_API_KEY }}
-          defectdojo_url: ${{ secrets.DEFECTDOJO_URL }}
-          file: reports/semgrep-report.sarif
-          scan_type: Semgrep Scan
-          engagement: ${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}
-
-      - name: Mostrar respuesta
+      - name: Enviar informe de Semgrep a DefectDojo
         run: |
-          set -e
-          printf '%s\n' '${{ steps.import-scan.outputs.response }}'
+          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
+            --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            --form "scan_type=Semgrep JSON Report" \
+            --form "file=@semgrep-report.sarif;type=application/json" \
+            --form "scan_date=$(date +%F)" \
+            --form "active=true" \
+            --form "verified=false" \
+            --form "minimum_severity=Low" \
+            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
